--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html> %HTML file
+<!DOCTYPE html> <!--Begin HTML file -->
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
-</html>
+  <body>
+    <h1>This is a Heading</h1>
+    <p>This is a paragraph. I am writing in html.</p>
+    <a href="https://www.w3schools.com">This is a link</a>
+    <img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
+  </body>
+</html> <!--End HTML file -->
